Ajuste de layout para celulares pequenos
Co-Authored-By: biancasofia <69814402+biancasofia@users.noreply.github.com>
Co-Authored-By: matheussalimdeoliveira <80415489+matheussalimdeoliveira@users.noreply.github.com>

--- a/App/app/src/main/res/layout/acitivity_informacoes_pessoais.xml
+++ b/App/app/src/main/res/layout/acitivity_informacoes_pessoais.xml
@@ -10,8 +10,8 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="26dp"
-        android:layout_marginLeft="26dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
         android:text="Informaçōes Pessoais"
         android:textSize="30sp"
@@ -20,13 +20,9 @@
 
     <EditText
         android:id="@+id/Acitivity_Informacoes_Pessoais_input_nome"
-        android:layout_width="365dp"
+        android:layout_width="300dp"
         android:layout_height="46dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginTop="64dp"
         android:ems="10"
         android:hint="Nome"
         android:inputType="textPersonName"
@@ -38,13 +34,9 @@
 
     <EditText
         android:id="@+id/Acitivity_Informacoes_Pessoais_input_sobrenome"
-        android:layout_width="365dp"
+        android:layout_width="300dp"
         android:layout_height="46dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Sobrenome"
         android:inputType="textPersonName"
@@ -56,13 +48,9 @@
 
     <EditText
         android:id="@+id/Acitivity_Informacoes_Pessoais_input_CPF"
-        android:layout_width="365dp"
+        android:layout_width="300dp"
         android:layout_height="46dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="CPF"
         android:inputType="textPersonName"
@@ -74,13 +62,9 @@
 
     <EditText
         android:id="@+id/Acitivity_Informacoes_Pessoais_input_Endereco"
-        android:layout_width="365dp"
+        android:layout_width="300dp"
         android:layout_height="46dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Endereço"
         android:inputType="textPersonName"
@@ -92,28 +76,24 @@
 
     <Button
         android:id="@+id/Acitivity_Informacoes_Pessoais_button_salva"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="108dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:text="Salvar "
         app:backgroundTint="#F2994A"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Acitivity_Informacoes_Pessoais_input_Endereco" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/Acitivity_Informacoes_Pessoais_input_data_aniversario"
-        android:layout_width="365dp"
+        android:layout_width="300dp"
         android:layout_height="46dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Data de nascimento"
         android:inputType="date"
