--- a/App/app/src/main/res/layout/activity_enfermeiro.xml
+++ b/App/app/src/main/res/layout/activity_enfermeiro.xml
@@ -8,10 +8,12 @@
 
     <ImageView
         android:id="@+id/activity_login_logo3"
-        android:layout_width="154dp"
-        android:layout_height="132dp"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
         android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
         android:contentDescription="TODO"
+        app:layout_constraintBottom_toTopOf="@+id/textVacina"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -19,18 +21,19 @@
 
     <EditText
         android:id="@+id/activity_enfermeiro_nome_enfermeiro"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:layout_marginBottom="24dp"
         android:ems="10"
         android:hint="Nome"
         android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/activity_enfermeiro_coren_enfermeiro"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textVacina" />
 
@@ -38,63 +41,73 @@
         android:id="@+id/textVacina"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         android:text="Cadastro do enfermeiro"
-        android:textColor="#FF5722"
-        android:textSize="18sp"
+        android:textColor="#F2994A"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activity_login_logo3" />
 
     <EditText
         android:id="@+id/activity_enfermeiro_coren_enfermeiro"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:ems="10"
         android:hint="COREN"
         android:inputType="number"
-        app:layout_constraintEnd_toEndOf="@+id/activity_enfermeiro_nome_enfermeiro"
-        app:layout_constraintStart_toStartOf="@+id/activity_enfermeiro_nome_enfermeiro"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activity_enfermeiro_nome_enfermeiro" />
 
     <EditText
         android:id="@+id/activity_enfermeiro_codigo_enfermeiro"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:ems="10"
         android:hint="Codigo"
         android:inputType="number"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/activity_enfermeiro_coren_enfermeiro"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/activity_enfermeiro_coren_enfermeiro"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textLote" />
 
     <TextView
         android:id="@+id/textLote"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_width="300dp"
+        android:layout_height="68dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:text="Por favor, escolha um numero para ser seu codigo para cadastrar vacinas tomadas dos pacientes"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/activity_enfermeiro_coren_enfermeiro"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activity_enfermeiro_coren_enfermeiro" />
 
     <Button
         android:id="@+id/activity_enfermeiro_button_enfermeiro"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:text="Confirmar"
         app:backgroundTint="#F2994A"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_enfermeiro_codigo_enfermeiro" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
