--- a/App/app/src/main/res/layout/activity_homepage.xml
+++ b/App/app/src/main/res/layout/activity_homepage.xml
@@ -12,73 +12,62 @@
         android:id="@+id/textAplicador"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="8dp"
         android:text="Aplicador"
         android:textColor="#F2994A"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textLote"
+        app:layout_constraintStart_toEndOf="@+id/textVacina"
         app:layout_constraintTop_toBottomOf="@+id/Activity_homepage_textview_nome_cliente" />
 
     <TextView
         android:id="@+id/textLote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="92dp"
-        android:layout_marginLeft="92dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="8dp"
         android:text="Lote"
         android:textColor="#F2994A"
         android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textData"
         app:layout_constraintTop_toBottomOf="@+id/Activity_homepage_textview_nome_cliente" />
 
     <Button
         android:id="@+id/Activity_homepage_button_sair"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="17dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:text="Sair"
         app:backgroundTint="#F2994A"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.958"
-        app:layout_constraintStart_toEndOf="@+id/Activity_homepage_button_PDF"
-        app:layout_constraintTop_toBottomOf="@+id/Activity_homepage_listview_aplicador"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/Activity_homepage_textview_nome_cliente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:text="Usuarios"
         android:textColor="#F2994A"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginTop="32dp"
         android:text="Bem-vindos"
         android:textColor="#F2994A"
-        android:textSize="30sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -87,9 +76,7 @@
         android:id="@+id/textVacina"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="8dp"
         android:text="Vacina"
         android:textColor="#F2994A"
         android:textSize="18sp"
@@ -100,62 +87,62 @@
         android:id="@+id/textData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="8dp"
         android:text="Data"
         android:textColor="#F2994A"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/textVacina"
+        app:layout_constraintStart_toEndOf="@+id/textAplicador"
         app:layout_constraintTop_toBottomOf="@+id/Activity_homepage_textview_nome_cliente" />
 
     <ListView
         android:id="@+id/Activity_homepage_listview_aplicador"
-        android:layout_width="86dp"
-        android:layout_height="404dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintStart_toEndOf="@+id/Activity_homepage_listview_lote"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/Activity_homepage_listview_data"
+        app:layout_constraintStart_toEndOf="@+id/Activity_homepage_listview_vacina"
         app:layout_constraintTop_toBottomOf="@+id/textAplicador" />
 
     <ListView
         android:id="@+id/Activity_homepage_listview_lote"
-        android:layout_width="86dp"
-        android:layout_height="404dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/Activity_homepage_listview_data"
         app:layout_constraintTop_toBottomOf="@+id/textLote" />
 
     <ListView
         android:id="@+id/Activity_homepage_listview_data"
-        android:layout_width="120dp"
-        android:layout_height="404dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintStart_toEndOf="@+id/Activity_homepage_listview_vacina"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/Activity_homepage_listview_lote"
+        app:layout_constraintStart_toEndOf="@+id/Activity_homepage_listview_aplicador"
         app:layout_constraintTop_toBottomOf="@+id/textData" />
 
     <ListView
         android:id="@+id/Activity_homepage_listview_vacina"
-        android:layout_width="86dp"
-        android:layout_height="404dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="79dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/Activity_homepage_listview_aplicador"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textVacina" />
 
     <Button
         android:id="@+id/Activity_homepage_button_PDF"
-        android:layout_width="90dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginBottom="16dp"
         android:text="PDF"
         app:backgroundTint="#F2994A"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Activity_homepage_listview_vacina"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
