--- a/App/app/src/main/res/layout/activity_informacoes_pessoais_edicao.xml
+++ b/App/app/src/main/res/layout/activity_informacoes_pessoais_edicao.xml
@@ -8,108 +8,122 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="26dp"
-        android:layout_marginLeft="26dp"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginLeft="35dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginBottom="18dp"
         android:text="Informaçōes Pessoais"
-        android:textSize="30sp"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/Activit_informacoes_pessoais_edicao_input_nome"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/Activit_informacoes_pessoais_edicao_input_nome"
-        android:layout_width="365dp"
-        android:layout_height="46dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginBottom="9dp"
         android:ems="10"
         android:hint="Nome"
         android:inputType="textPersonName"
         android:textColor="#F2994A"
         android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/Activity_informacoes_pessoais_edicao_input_sobrenome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
         android:id="@+id/Activity_informacoes_pessoais_edicao_input_sobrenome"
-        android:layout_width="365dp"
-        android:layout_height="46dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginBottom="16dp"
         android:ems="10"
         android:hint="Sobrenome"
         android:inputType="textPersonName"
         android:textColor="#F2994A"
         android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/Activity_informacoes_pessoais_edicao_input_data_aniversario"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Activit_informacoes_pessoais_edicao_input_nome" />
 
     <EditText
         android:id="@+id/Activity_informacoes_pessoais_edicao_input_Endereco"
-        android:layout_width="365dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="98dp"
         android:ems="10"
         android:hint="Endereço"
         android:inputType="textPersonName"
         android:textColor="#F2994A"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/Activity_informacoes_pessoais_edicao_input_CPF"
-        app:layout_constraintStart_toStartOf="@+id/Activity_informacoes_pessoais_edicao_input_CPF"
+        app:layout_constraintBottom_toTopOf="@+id/Activity_informacoes_pessoais_edicao_button_salva"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Activity_informacoes_pessoais_edicao_input_CPF" />
 
     <Button
         android:id="@+id/Activity_informacoes_pessoais_edicao_button_salva"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="108dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="16dp"
         android:text="Salvar "
         app:backgroundTint="#F2994A"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Activity_informacoes_pessoais_edicao_input_Endereco" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/Activity_informacoes_pessoais_edicao_input_data_aniversario"
-        android:layout_width="365dp"
-        android:layout_height="46dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="13dp"
         android:ems="10"
         android:hint="Data de nascimento"
         android:inputType="date"
         android:textColor="#F2994A"
+        app:layout_constraintBottom_toTopOf="@+id/Activity_informacoes_pessoais_edicao_input_CPF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Activity_informacoes_pessoais_edicao_input_sobrenome" />
 
     <EditText
         android:id="@+id/Activity_informacoes_pessoais_edicao_input_CPF"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginLeft="17dp"
+        android:layout_marginEnd="17dp"
+        android:layout_marginRight="17dp"
+        android:layout_marginBottom="12dp"
         android:ems="10"
         android:hint="CPF"
         android:inputType="number"
-        app:layout_constraintEnd_toEndOf="@+id/Activity_informacoes_pessoais_edicao_input_data_aniversario"
-        app:layout_constraintStart_toStartOf="@+id/Activity_informacoes_pessoais_edicao_input_data_aniversario"
+        app:layout_constraintBottom_toTopOf="@+id/Activity_informacoes_pessoais_edicao_input_Endereco"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Activity_informacoes_pessoais_edicao_input_data_aniversario" />
 
 
