--- a/App/app/src/main/res/layout/activity_cadastro.xml
+++ b/App/app/src/main/res/layout/activity_cadastro.xml
@@ -8,11 +8,13 @@
 
     <ImageView
         android:id="@+id/activity_login_logo2"
-        android:layout_width="154dp"
-        android:layout_height="132dp"
-        android:layout_marginStart="128dp"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
         android:layout_marginTop="44dp"
+        android:layout_marginBottom="26dp"
         android:contentDescription="TODO"
+        app:layout_constraintBottom_toTopOf="@+id/activity_login_texto_evacina3"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
@@ -21,54 +23,61 @@
         android:id="@+id/activity_login_texto_evacina3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginEnd="88dp"
+        android:layout_marginRight="88dp"
+        android:layout_marginBottom="5dp"
         android:text="CADASTRO"
         android:textColor="#F2994A"
-        android:textSize="32sp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar"
+        app:layout_constraintEnd_toEndOf="@+id/activity_login_logo2"
         app:layout_constraintTop_toBottomOf="@+id/activity_login_logo2" />
 
     <EditText
         android:id="@+id/acitivityCadastro_input_email"
         android:layout_width="300dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="292dp"
-        android:layout_marginEnd="16dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginRight="55dp"
+        android:layout_marginBottom="30dp"
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textPersonName"
         android:textColor="#F2994A"
+        app:layout_constraintBottom_toTopOf="@+id/acitivityCadastro_input_password"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
 
     <EditText
         android:id="@+id/acitivityCadastro_input_senha_confirmar"
         android:layout_width="300dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="16dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginRight="55dp"
         android:ems="10"
         android:hint="Confirme a senha"
         android:inputType="textPersonName"
         android:textColor="#F2994A"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/acitivityCadastro_input_password" />
 
+
     <Button
         android:id="@+id/acitivityCadastro_button_confirmar"
-        android:layout_width="300dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="168dp"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginRight="55dp"
+        android:layout_marginBottom="16dp"
         android:background="#F2994A"
         android:outlineSpotShadowColor="#F2994A"
         android:text="Confirmar cadastro"
@@ -76,36 +85,41 @@
         app:backgroundTint="#F2994A"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/acitivityCadastro_input_senha_confirmar" />
-
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ProgressBar
         android:id="@+id/progressBar"
-        android:layout_width="300dp"
-        android:layout_height="42dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginRight="55dp"
         android:indeterminate="true"
         android:indeterminateTint="#FF5722"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/acitivityCadastro_input_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activity_login_texto_evacina3"
         tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/acitivityCadastro_input_password"
         android:layout_width="300dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="16dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="55dp"
+        android:layout_marginLeft="55dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginRight="55dp"
         android:ems="10"
         android:hint="Senha"
         android:inputType="textPersonName"
         android:textColor="#F2994A"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/acitivityCadastro_input_email" />
 
