--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -4,196 +4,162 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:screenOrientation="portrait"
     tools:context=".ui.acitivity.MainActivity">
 
     <ImageView
         android:id="@+id/activity_login_logo"
-        android:layout_width="154dp"
-        android:layout_height="132dp"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="32dp"
         android:contentDescription="TODO"
+        app:layout_constraintBottom_toTopOf="@+id/activity_login_texto_evacina"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.81"
         app:srcCompat="@drawable/logo" />
 
     <TextView
         android:id="@+id/activity_login_texto_evacina"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="132dp"
+        android:layout_marginEnd="96dp"
+        android:layout_marginRight="96dp"
         android:text="E-VACINA"
         android:textColor="#F2994A"
-        android:textSize="32sp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/progressBarLogin"
+        app:layout_constraintEnd_toEndOf="@+id/activity_login_logo"
         app:layout_constraintTop_toBottomOf="@+id/activity_login_logo" />
 
     <TextView
         android:id="@+id/activity_login_texto_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="300dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="45dp"
         android:text="E-mail"
         android:textColor="#F2994A"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/ActivityMain_input_email"
+        app:layout_constraintBottom_toTopOf="@+id/activity_login_texto_senha"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/progressBarLogin" />
 
     <EditText
         android:id="@+id/ActivityMain_input_email"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="332dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_width="0dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginTop="21dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginRight="45dp"
+        android:layout_marginBottom="22dp"
+        android:drawableLeft="@android:drawable/ic_dialog_email"
         android:ems="10"
         android:inputType="textEmailAddress"
         android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/activity_login_texto_senha"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="340dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:layout_constraintTop_toTopOf="@+id/activity_login_texto_email" />
 
     <EditText
         android:id="@+id/ActivityMain_input_senha"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="416dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_width="0dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginRight="45dp"
+        android:layout_marginBottom="24dp"
+        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
         android:ems="10"
         android:inputType="textPassword"
         android:password="true"
         android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/ActivityMain_button_entrar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="32dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="420dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_lock_idle_lock" />
+        app:layout_constraintTop_toBottomOf="@+id/activity_login_texto_senha" />
 
     <TextView
         android:id="@+id/activity_login_texto_senha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="392dp"
-        android:layout_marginEnd="187dp"
-        android:layout_marginBottom="5dp"
         android:text="Senha"
         android:textColor="#F2994A"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/ActivityMain_input_senha"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/activity_login_texto_email"
+        app:layout_constraintTop_toBottomOf="@+id/activity_login_texto_email" />
 
     <Button
         android:id="@+id/ActivityMain_button_entrar"
-        android:layout_width="300dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="480dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
         android:text="Entrar"
         android:textColor="@color/white"
         android:textColorHint="#F2994A"
+        android:textSize="10sp"
         app:backgroundTint="#F2994A"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/ActivityMain_button_cadastrar"
+        app:layout_constraintEnd_toEndOf="@+id/ActivityMain_button_cadastrar"
+        app:layout_constraintStart_toStartOf="@+id/ActivityMain_button_cadastrar"
+        app:layout_constraintTop_toBottomOf="@+id/ActivityMain_input_senha" />
 
     <Button
         android:id="@+id/ActivityMain_button_cadastrar"
-        android:layout_width="300dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="536dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
         android:text="Cadastrar"
         android:textColor="@color/white"
+        android:textSize="10sp"
         app:backgroundTint="#F2994A"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/ActivityMain_button_sou_enfermeiro"
+        app:layout_constraintEnd_toEndOf="@+id/ActivityMain_button_sou_enfermeiro"
+        app:layout_constraintStart_toStartOf="@+id/ActivityMain_button_sou_enfermeiro"
+        app:layout_constraintTop_toBottomOf="@+id/ActivityMain_button_entrar" />
 
     <ProgressBar
         android:id="@+id/progressBarLogin"
-        android:layout_width="300dp"
-        android:layout_height="42dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
 
         android:indeterminate="true"
         android:indeterminateTint="#FF5722"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/activity_login_texto_email"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activity_login_texto_evacina"
         tools:ignore="MissingConstraints" />
 
-    <TextView
-        android:id="@+id/activity_login_text_direitos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
-        android:layout_marginBottom="8dp"
-        android:text="Direitos autorais reservado ao grupo GAMS"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <Button
         android:id="@+id/ActivityMain_button_recuperar_senha"
         style="@style/Widget.AppCompat.Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="32dp"
         android:text="Recuperar senha"
+        android:textSize="10sp"
         app:backgroundTint="#F2994A"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ActivityMain_button_cadastrar"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/ActivityMain_button_sou_enfermeiro" />
 
     <Button
         android:id="@+id/ActivityMain_button_sou_enfermeiro"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_height="40dp"
         android:text="Sou enfermeiro"
+        android:textSize="10sp"
         app:backgroundTint="#F2994A"
+        app:layout_constraintBottom_toTopOf="@+id/ActivityMain_button_recuperar_senha"
         app:layout_constraintEnd_toEndOf="@+id/ActivityMain_button_recuperar_senha"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/ActivityMain_button_recuperar_senha"
-        app:layout_constraintTop_toBottomOf="@+id/ActivityMain_button_recuperar_senha" />
+        app:layout_constraintTop_toBottomOf="@+id/ActivityMain_button_cadastrar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
